package tttTDD.Java;

public class Game {

    public Game() {

    }
}
